--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,11 @@
 !!! 5
-//if lt IE 7 ]><html class="ie ie6" lang="en">
-//if IE 7 ]><html class="ie ie7" lang="en">
-//if IE 8 ]><html class="ie ie8" lang="en">
-// [if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]
+//if lt IE 7 ]><html class="ie ie6" lang="en" ng-app='subile'>
+//if IE 7 ]><html class="ie ie7" lang="en" ng-app='subile'>
+//if IE 8 ]><html class="ie ie8" lang="en" ng-app='subile'>
+// [if (gte IE 9)|!(IE)]><!--><html lang="en" ng-app='subile'> <!--<![endif]
 head
   meta(charset='utf-8')
-  title Express CoffeeScript Template
+  title Subile volumen
   meta(name='description', content='')
   meta(name='author', content='')
   // Mobile Specific
@@ -18,8 +18,18 @@ head
 body
   block content
 
+  // Load jQuery
   != js('//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js')
   != js('//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js')
   != js('app')
+  // Load Angular
+  != js("lib/angular-1.0.5/angular.min")
+  // Load Angular Configuration
+  != js("app")
+  != js("controllers")
+  != js("directives")
+  != js("filters")
+  != js("services")
+
 
 | </html>
