--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,7 @@ body
   // Load jQuery
   != js('//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js')
   != js('//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js')
-  != js('app')
+  script(src='/socket.io/socket.io.js')
   // Load Angular
   != js("lib/angular-1.0.5/angular.min")
   // Load Angular Configuration
