--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,8 @@ body
 
   // Load jQuery
   != js('//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js')
-  != js('//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js')
+  != js('//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js')
+  != js('//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js')  
   script(src='/socket.io/socket.io.js')
   // Load Angular
   != js("lib/angular-1.0.5/angular.min")
