--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,9 @@ head
       display: none;
       }
   // CSS
-  != css("//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.no-icons.min.css")
+  != css("//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css")
+  != css("//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css")
+  != css("//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css")  
   != css('app')
   
 body(ng-cloak='ng-cloak')
@@ -24,7 +26,7 @@ body(ng-cloak='ng-cloak')
   // Load jQuery
   != js('//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js')
   != js('//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js')
-  != js('//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js')  
+  != js('//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js')  
   script(src='/socket.io/socket.io.js')
   // Load Angular
   != js("lib/angular-1.0.5/angular.min")
