--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -26,6 +26,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
 }
 .login { 
+  // background-color: rgba(240,240,249,0.1);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -33,7 +34,13 @@ body {
   width:300px;
   height:300px;
 }
-.login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
+.sing-up { margin-top: 5px; text-align: right;}
+.sing-up a{color: #fff; font-size: 10px;text-decoration: none;}
+.sing-up a:hover{color: #bbb;}
+
+.zocial {
+  width: 100% !important;
+}
 
 input { 
   width: 100%; 
@@ -55,3 +62,13 @@ input {
   transition: box-shadow .5s ease;
 }
 input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+
+hr{
+    border: 0;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, rgba(250,250,250,0), rgba(250,250,250,0.75), rgba(250,250,250,0));
+    background-image:    -moz-linear-gradient(left, rgba(250,250,250,0), rgba(250,250,250,0.75), rgba(250,250,250,0)); 
+    background-image:     -ms-linear-gradient(left, rgba(250,250,250,0), rgba(250,250,250,0.75), rgba(250,250,250,0)); 
+    background-image:      -o-linear-gradient(left, rgba(250,250,250,0), rgba(250,250,250,0.75), rgba(250,250,250,0)); 
+}
