--- a/views/authentication/login.jade
+++ b/views/authentication/login.jade
@@ -1,4 +1,4 @@
-extends ./../layout
+extends ./../layout-presentation
 block content
   .login
     a(href='/auth/facebook',class='zocial facebook') Login with Facebook
